# samtalsstod

./: README.md  pyproject.toml  se.danielnylander.samtalsstod.desktop
.tx/: config
po/: samtalsstod.pot  sv.mo  sv.po
src/samtalsstod/: main.py
